Fix warnings leerkracht controller, fix center align input and button home

--- a/BreakOutBox/wwwroot/css/app.css
+++ b/BreakOutBox/wwwroot/css/app.css
@@ -10,3 +10,7 @@ nav .btn:hover {
 .alert-warning {
     color: rgba(0,0,0,0.66);
 }
+
+#homeForm > * {
+    display: inline-block;
+}
